# xlspp

./: .clang-format  .clang-tidy  CMakeLists.txt  vcpkg.json
cmake/: Format.cmake  PreventInSourceBuilds.cmake  format.cmake
examples/: CMakeLists.txt  simple_write.cpp  simple_write_extended.cpp
scripts/: runformat.py
src/: CMakeLists.txt  cell_type.hpp  read.cpp  reader.cpp  reader.hpp  workbook.cpp  workbook_utils.cpp  workbook_utils.hpp  worksheet_utils.cpp  worksheet_utils.hpp  write.cpp  zip_archive.cpp  zip_archive.hpp
src/include/xlspp/: cell.hpp  error.hpp  read.hpp  workbook.hpp  worksheet.hpp  write.hpp  xlspp.hpp
tests/: CMakeLists.txt  test_read.cpp  test_read_invalid.cpp  test_workbook_utils.cpp  test_worksheet.cpp  test_write.cpp  test_write_invalid.cpp  test_zip_archive.cpp
